[tool.poetry]
name = "engineered"
version = "0.1.0"
description = "The engineered blog"
authors = ["Pértile Franco Giuliano"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
