[tool.poetry]
name = "engineered"
version = "0.1.0"
description = "The engineered blog"
authors = ["Pértile Franco Giuliano"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.0.4"
Pillow = "9.1.0"
django-tailwind = "^3.1.1"
django-taggit = "3.0.0"
django-ckeditor = "6.4.0"
django-dotenv = "1.4.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
